# skde

./: Cargo.toml  README.md
benches/: aggregate.rs  aggregate_with_hash.rs
crates/big_integer/: Cargo.toml
crates/big_integer/src/: chip.rs  instructions.rs  lib.rs  utils.rs
crates/hash/: Cargo.toml
crates/hash/src/: chip.rs  lib.rs
crates/poseidon/: Cargo.toml
crates/poseidon/src/: chip.rs  grain.rs  lib.rs  permutation.rs  poseidon.rs  spec.rs
public/: index.html
src/: errors.rs  lib.rs  tests.rs  util.rs  wasm.rs
src/aggregate/: chip.rs  circuit.rs  config.rs  instructions.rs  mod.rs
src/aggregate/chip/: hash_chip.rs  mod.rs  raw_chip.rs
src/aggregate/circuit/: hash_circuit.rs  mod.rs  raw_circuit.rs
src/aggregate/key/: aggregate_partial_keys.rs  extraction_key.rs  mod.rs
src/aggregate_with_hash/: chip.rs  circuit.rs  instructions.rs  mod.rs
src/big_integer/: chip.rs  mod.rs
src/delay_encryption/: aes_utils.rs  cryptography.rs  encryption.rs  mod.rs  single_key_delay_encryption_zkp.rs  time_lock_puzzle.rs  types.rs  util.rs
src/hash/: chip.rs
src/key_aggregation/: config.rs  instructions.rs  mod.rs  types.rs
src/key_aggregation/chip/: hash_chip.rs  mod.rs  raw_chip.rs
src/key_aggregation/circuit/: hash_circuit.rs  raw_circuit.rs
src/key_generation/: errors.rs  mod.rs  partial_key_validity.rs  range_proof  range_proof.rs  sigma_proof.rs  types.rs
src/poseidon/: chip.rs  grain.rs  matrix.rs  permutation.rs  poseidon.rs  spec.rs
src/range_proof/: mod.rs  range_proof  range_proof.rs
(+2 files in other folders)
