[package]
name = "skde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Halo2
maingate = {git = "https://github.com/privacy-scaling-explorations/halo2wrong", tags = "v2023_04_20" , default-features = false }
halo2wrong = {git = "https://github.com/privacy-scaling-explorations/halo2wrong", tags = "v2023_04_20" , default-features = false }
rand = "0.8.5"
rand_core = { version = "0.6", default-features = false }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
ff = "0.13"
group = "0.13"
subtle = { version = "2.3", default-features = false }
bitvec = "1"
sha2 = "0.10.6"
rayon = "1.5.1"

[dev-dependencies]
paste = "1.0.7"
proptest = "1.0.0"  #proptest = {version = "1.0.0", optional = true}
criterion = { version = "0.3", features = ["html_reports"] }

[lib]
doctest = false
bench = false

[[bench]]
name = "aggregate"
harness = false

[[bin]]
name = "test_performance"
path = "src/bin/test_performance.rs"

[profile.release]
debug = true