[package]
name = "big-integer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
halo2wrong = { workspace = true }
maingate = { workspace = true }
ff = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
poseidon = { workspace = true }